fix width on pg and scrollbar 1440px

--- a/src/Screen/css/DetailQuiz.css
+++ b/src/Screen/css/DetailQuiz.css
@@ -172,7 +172,7 @@
     }
     .hr-gd{
         width:750px;
-        margin-left: 75px;
+        margin-left: 85px;
     }
     .ls-dq-gd{
         margin-left: -55px;
