--- a/src/Screen/css/ListVideo.css
+++ b/src/Screen/css/ListVideo.css
@@ -365,7 +365,7 @@
     margin-left: 30px;
     float: left;
     height: 500px;
-    width: 325px;
+    width: 320px;
     background: #fff;
     overflow-y: scroll;
     margin-bottom: 25px;
