--- a/src/Screen/css/ProgressDetail.css
+++ b/src/Screen/css/ProgressDetail.css
@@ -1,5 +1,35 @@
 @media only screen and (max-width: 2560px) {
     .dv-pg-gd{
+        width:320px;
+        background-Color:#FF6567;
+        height:115px;
+        border-Radius:5px;
+        margin-top: 30px
+    }
+    .h2-pg-gd{
+        color:#FFF;
+        margin-Left:20px;
+        font-size: 20px;
+        font-weight: 600;
+        font-family: 'Nunito',sans-serif;
+    }
+    .pg-pg-gd{
+        width:100;
+        margin-Left:20px;
+        margin-Right:20px;
+        border-radius: 10px;
+    }
+    .pg-lb-gd{
+        font-weight: 600;
+        font-family: 'Nunito',sans-serif;
+        margin-Left:260px;
+        margin-Top:5px;
+        color:#FFF;
+        font-size: 20px;
+    }
+}
+@media only screen and (max-width: 1366px) {
+    .dv-pg-gd{
         width:323px;
         background-Color:#FF6567;
         height:115px;
